--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <title>
 
-             Рябич Кирило 302 - ТН Лабораторна робота №1
+             Рябич Кирило 302 - ТН Лабораторна робота №3
 
              </title>
     </head>
@@ -89,6 +89,9 @@
             
        </pre>
 
+       <p align="center">
+        <img src="./Logolb2.png" alt="moon" border = "0" width="150" height="150" />
+    </p>
        <p align="right">
         <i>
             <u>
