--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             }
             
        </pre>
-
+        <p align="right">
             <u>
                 Студент групи 302 - ТН Рябич К.В.
             </u>
