--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             }
             
        </pre>
-       <p align="center">
+       <p align="right">
         <i>
             <u>
                 Студент групи 302 - ТН Рябич К.В.
