--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
             }
             
        </pre>
-       <p align="right">
+       <div align="right">
         <i>
             <u>
                 Студент групи 302 - ТН Рябич К.В.
             </u>
         </i>
-    </p>
+    </diw>
     </body>
