--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
                 }
             
                 return 0;
-            }
-            
+            }    
        </pre>
-       <div align="right">
+
+       <p align="right">
         <i>
             <u>
                 Студент групи 302 - ТН Рябич К.В.
             </u>
         </i>
-       </div>
+    </p
     </body>
